# FastSurfer_QT

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROGRESS_TESTING_SUMMARY.md  README.md  brun_fastsurfer.sh  diagram.mmd  evaluation_data_manifest.csv  long_fastsurfer.sh  pyproject.toml  requirements.cpu.txt  requirements.mac.txt  requirements.txt  run_fastsurfer.sh  run_progress_tests.sh  srun_fastsurfer.sh  stools.sh  subjects.csv
.agents/: README.md
.agents/roles/: architect.md  coder.md  product_owner.md  reviewer.md  tester.md
.agents/workflows/: multi-agent-workflow.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  questions-help-support.md
.github/workflows/: QUICKTEST.md  ci-checks.yml  code-style.yml  deploy.yml  desktop-ci.yml  doc.yml  quicktest.yaml
.ruff_cache/: .gitignore
.ruff_cache/0.15.9/: 3530020316549082774
.venv-parity/: pyvenv.cfg
Documentation/: TRAINING_DATA.md
FastSurferCNN/: README.md  download_checkpoints.py  inference.py  inference_onnx.py  model_converters.py  quick_qc.py  reduce_to_aseg.py  run_prediction.py  segstats.py  train.py  version.py
FastSurferCNN/config/: FastSurferVINN.yaml  defaults.py
FastSurferCNN/data_loader/: conform.py  data_utils.py  dataset.py
FastSurferCNN/fl/: request_handler.py  task.py
FastSurferCNN/models/: interpolation_layer.py  networks.py
FastSurferCNN/utils/: __init__.py  arg_types.py  brainvolstats.py  checkpoint.py  common.py  logging.py  lta.py  metrics.py  parallel.py  parser_defaults.py  run_tools.py
Tutorial/: Complete_FastSurfer_Tutorial.ipynb  README.md
_app/core/: CMakeLists.txt  build_core.sh
_app/core/include/fastsurfer/core/: conform_policy.h  conform_step_result.h  conform_step_service.h  constants.h  image_metadata.h  mgh_image.h  nifti_converter.h  step_conform.h  step_conform_request.h
_app/core/src/: conform_policy.cpp  conform_step_service.cpp  mgh_image.cpp  nifti_converter.cpp  step_conform.cpp
_app/core/tests/: CMakeLists.txt  CTestTestfile.cmake  TestConstants.h  TestHelpers.h  test_conform_policy.cpp  test_conform_step_service.cpp  test_conform_step_service_nifti.cpp  test_native_reconform_non_conformed.cpp  test_nifti_converter.cpp  test_nifti_converter_roundtrip.cpp  test_nifti_roundtrip.cpp  test_python_parity_conform_step.cpp  test_step_conform.cpp
_app/desktop/: CMakeLists.txt  README.md
_app/desktop/include/app/: AppStatusBar.h  MainWindow.h  NavigationRail.h  PageId.h  Theme.h  TopBar.h
_app/desktop/include/screens/: AnalyticsPage.h  DashboardPage.h  PipelinesPage.h  ScanViewerPage.h
_app/desktop/include/widgets/: AnalyticsChart.h  MetricCard.h  PipelineNode.h  ViewerPane.h
_app/desktop/qml/qtquickdesktop/: Main.qml  Theme.qml
_app/desktop/qml/qtquickdesktop/components/: AnalyticsBarChart.qml  AppShell.qml  MetricCard.qml  PillChip.qml  PipelineConformStepCard.qml  SectionHeader.qml  SideNav.qml  SurfacePanel.qml  TopBar.qml  ViewerPane.qml
_app/desktop/qml/qtquickdesktop/pages/: AnalyticsPage.qml  DashboardPage.qml  PipelinesPage.qml  ScanViewerPage.qml
_app/desktop/src/: main.cpp
_app/desktop/src/app/: AppStatusBar.cpp  MainWindow.cpp  NavigationRail.cpp  Theme.cpp  TopBar.cpp  application_controller.cpp  application_controller.h  navigation_state.cpp  navigation_state.h
_app/desktop/src/screens/: AnalyticsPage.cpp  DashboardPage.cpp  PipelinesPage.cpp  ScanViewerPage.cpp
_app/desktop/src/widgets/: AnalyticsChart.cpp  MetricCard.cpp  PipelineNode.cpp  ViewerPane.cpp
_app/specs/: evaluation.md
core/: CMakeLists.txt  build_core.sh
core/.deps/rapidcheck/usr/share/doc/librapidcheck-dev/: copyright
core/.deps/rapidcheck_pkg/: librapidcheck-dev_0~1048-a5724ea-1_amd64.deb
core/include/imaging/common/: mgh_image.h  nifti_converter.h
core/include/imaging/mri/fastsurfer/: conform_policy.h  constants.h  image_metadata.h  label_mapping.h  label_mapping_result.h  label_types.h  mgh_image.h  nifti_converter.h  spatial_label_transforms.h  step_conform.h  step_conform_request.h  step_conform_result.h
core/src/imaging/common/: mgh_image.cpp  nifti_converter.cpp
core/src/imaging/mri/fastsurfer/: conform_policy.cpp  label_mapping.cpp  mgh_image.cpp  nifti_converter.cpp  spatial_label_transforms.cpp  step_conform.cpp
core/tests/: CMakeLists.txt
core/tests/imaging/mri/fastsurfer/: TestConstants.h  TestFixtureBuilders.h  TestHelpers.h  TestParitySupport.h  test_conform_policy.cpp  test_label_mapping.cpp  test_label_mapping_parity.cpp  test_native_reconform_non_conformed.cpp  test_nifti_converter.cpp  test_nifti_converter_roundtrip.cpp  test_python_parity_conform_step.cpp  test_step_conform.cpp  test_step_conform_parity.cpp
core/tests/imaging/mri/fastsurfer/python_oracles/: label_mapping_oracle.py
di/: README.md  __init__.py  config_loader.py  container.py  factories.py  federated_factories.py  wrappers.py
doc/: conf.py  index.rst
doc/api/: CerebNet.datasets.rst  CorpusCallosum.data.rst  CorpusCallosum.localization.rst  CorpusCallosum.rst  CorpusCallosum.segmentation.rst  CorpusCallosum.shape.rst  CorpusCallosum.transforms.rst  CorpusCallosum.utils.rst  FastSurferCNN.models.rst  FastSurferCNN.utils.rst  index.rst  recon_surf.rst
doc/developer/: GIT-HOOKS.md  code_of_conduct.rst  contributing.rst  index.rst
doc/overview/: EDITING.md  EXAMPLES.md  INSTALL.md  LONG.md  MACOS.md  OUTPUT_FILES.md  QUICKSTART.md  SECURITY.md  SINGULARITY.md  docker.rst  index.rst  intro.rst  license.rst
doc/scripts/: BATCH.md  RUN_FASTSURFER.md  SLURM.md  advanced.rst  cc_visualization.rst  fastsurfer_cc.rst  fastsurfercnn.run_model.rst  index.rst  long_compat_segmentHA.rst  (+1 more)
fl/: __init__.py  api.py  backends.py
fl/flower/: pyproject.toml
recon_surf/: README.md  align_points.py  align_seg.py  fs_time  functions.sh  long_compat_segmentHA.py  long_prepare_template.sh  recon-surf.sh  recon-surfreg.sh  sample_parc.py  spherically_project.py  spherically_project_wrapper.py
test/: README.md
tools/: generate_fastsurfercnn_intermediate_outputs.py  read_toml.py
(+70 files in other folders)
